--- a/lang/en.json
+++ b/lang/en.json
@@ -151,7 +151,7 @@
     "about_crctext":"CRC Robotics Competition is a non-profit organization founded in 2001 that successfully established a way to link engineering, coding, art, mathematics, and more into one competition. In recent years, they have also added a junior division, making robotics more accessible to younger participants.",
     "beyond_competition":"Beyond Competition",
     "beyond_competitiontext":"Beyond the competitive aspect, CRC places strong emphasis on having their competition improve contestants’ teamwork, building meaningful connections, and providing resources necessary to develop their knowledge in STEM.",
-    "crc_more":"To learn more about the competition, you can visit their",
+    "crc_more":"To learn more about the competition, you can visit their website below.",
     
     "conception_title1":"Game Piece Conveyor System",
     "conception_title2":"Electronics",
