--- a/lang/fr.json
+++ b/lang/fr.json
@@ -148,7 +148,7 @@
     "about_crctext":"CRC Roboticque est un organisme à but non lucratif fondé en 2001 qui a réussi à établir un moyen de relier l'ingénierie, la programmation, l'art, les mathématiques et bien plus encore en une seule compétition. Ces dernières années, une division junior a également été ajoutée, rendant la robotique plus accessible aux plus jeunes participants.",
     "beyond_competition":"Au-delà de la compétition",
     "beyond_competitiontext":"Au-delà de l'aspect compétitif, CRC met fortement l'accent sur l'amélioration du travail d'équipe des participants, la création de liens significatifs et la mise à disposition des ressources nécessaires au développement de leurs connaissances en STIM.",
-    "crc_more":"Pour en savoir plus sur la compétition, vous pouvez visiter leur",
+    "crc_more":"Pour en savoir plus sur la compétition, vous pouvez visiter leur site web dessous.",
 
     "conception_title1":"Système de convoyeur de pièces de jeu",
     "conception_title2":"Électronique",
