--- a/lang/en.json
+++ b/lang/en.json
@@ -134,6 +134,32 @@
     "rule16":"Each component in the spare parts zone is worth 40 points.",
     "rule17":"The End.",
 
+    "componentprog": "Component Progress",
+    "viewtime": "View Timeline",
+    "braintitle": "First concrete idea/iteration of the robot design featuring :",
+    "braindesc": "3D printer style lift and game piece manipulation system at front, bevel gear meccanum wheel drive powered by Goblilda yellow jackets, ramp and back end slotting compartment molded to the game engines.",
+    "findesign": "Finalized Design",
+    "process":"Process",
+    "frametitle":"Frame",
+    "framedesc":"Build the frame of the robot, finalize dimensions and main chassis bracing",
+    "convtitle":"Conveyor",
+    "convdesc":"Build / Design the conveyor systems distinct to each GP",
+    "drivetitle":"Drive",
+    "drivedesc":"Build the drive system, build bracing and connected bearings / gears, Changed from tread drive to RWD independent drive sys.",
+    "roadblocks":"Roadblocks",
+    "roadblock1":"Roadblock 1",
+    "roadblock2":"Roadblock 2",
+    "roadblock3":"Roadblock 3",
+    "rb1":"Our first obstacle was making all systems as such so that the total footprint fits the dimension limit of the robot on top of leaving enough space for the GP conveyors since we designed the robot to go over the Engine.",
+    "rb2":"Our first obstacle continues. The next obstacle was that the tread was so fragile and susceptible to shearing so we had to change the drive system as whole, only keeping the same bracing.",
+    "rb3":"The final obstacle was finding the precise positioning for the lift perfect optimal counter balancing due to our slightly shortened wheel base and back heavy components.",
+    "clawtitle":"Claw",
+    "clawdesc":"Design claw and build the claw lift system, CAD the sprockets for the chain-pulley system, calculate increased moment of inertia and build lift",
+    "lefttitle":"Complete electronics of the robot",
+    "leftdesc":"Optimize electronic’s positioning, cable managing",
+    "righttitle":"Testing",
+    "rightdesc":"Testing the robot and all of its components in our practice field, with engines and Game Pieces, making sure that all systems are functional and stress test each part",
+    
     "toggle_full":"Toggle Fullscreen",
     "toggle_scan":"Toggle Scanline Effect",
 
