--- a/lang/fr.json
+++ b/lang/fr.json
@@ -131,6 +131,32 @@
     "rule16":"Chaque composant dans la zone de pièces de rechange vaut 40 points.",
     "rule17":"Fin.",
 
+    "componentprog": "Progression des composants",
+    "viewtime": "Voir la chronologie",
+    "braintitle": "Première idée concrète/itération de la conception du robot comprenant :",
+    "braindesc": "Système de levage de type imprimante 3D et de manipulation des pièces de jeu à l'avant, entraînement par roues Meccanum à engrenages coniques alimenté par des moteurs Goblilda Yellow Jackets, rampe et compartiment de rangement arrière moulé pour s'adapter aux moteurs du jeu.",
+    "findesign": "Conception Finalisée",
+    "process":"Processus",
+    "frametitle":"Châssis",
+    "framedesc":"Construire le châssis du robot, finaliser les dimensions et le renfort principal du châssis.",
+    "convtitle":"Convoyeur",
+    "convdesc":"Concevoir / construire des systèmes de convoyage distincts pour chaque GP",
+    "roadblocks":"Défis",
+    "roadblock1":"Défi 1",
+    "roadblock2":"Défi 2",
+    "roadblock3":"Défi 3",
+    "rb1":"Notre premier obstacle a été de concevoir tous les systèmes de manière à ce que l'encombrement total respecte les limites dimensionnelles du robot, tout en laissant suffisamment d'espace pour les convoyeurs GP, car nous avons conçu le robot pour qu'il passe au-dessus du moteur.",
+    "rb2":"Notre premier obstacle persiste. Le suivant était que la bande de roulement était si fragile et susceptible de se déchirer que nous avons dû changer tout le système d'entraînement, en ne conservant que le même renfort.",
+    "rb3":"Le dernier obstacle consistait à trouver le positionnement précis de l'élévateur pour obtenir un contrepoids optimal, en raison de notre empattement légèrement raccourci et de nos composants lourds à l'arrière.",
+    "clawtitle":"Pince",
+    "clawdesc":"Concevoir la griffe et construire le système de levage à griffe, modéliser les pignons pour le système chaîne-poulie à l'aide d'un logiciel de CAO, calculer l'augmentation du moment d'inertie et construire le système de levage.",
+    "drivetitle":"Propulsion",
+    "drivedesc":"Construire le système d'entraînement, construire les renforts et les roulements / engrenages connectés, passer d'un entraînement par bande de roulement à un système d'entraînement indépendant à traction arrière.",
+    "lefttitle":"Électronique complète du robot",
+    "leftdesc":"Optimiser le positionnement des composants électroniques, la gestion des câbles",
+    "righttitle":"Essais",
+    "rightdesc":"Tester le robot et tous ses composants sur notre terrain d'entraînement, avec les moteurs et les pièces de jeu, afin de s'assurer que tous les systèmes fonctionnent correctement et de soumettre chaque pièce à des tests de résistance.",
+    
     "toggle_full":"Basculer Plein Écran",
     "toggle_scan":"Lignes de Balayage",
 
