Add descriptions and facts for mentors

--- a/lang/en.json
+++ b/lang/en.json
@@ -213,5 +213,15 @@
     "sofiamazareanu_desc": "I directed the video and wrote the script for it.",
     "sofiamazareanu_fact": "I like the colour blue."
 
+    
+    "mentordesc":"Mentor & Science Teacher",
+    "hilli_desc":"I am a mentor of the robotics club at West Isand College.",
+    "hilli_fact":"I know your zodiac.",
+    "gill_desc":"I am a mentor of the robotics club at West Isand College.",
+    "gill_fact":"I hate everybody equally.",
+    "vasili_desc":"Worked on kiosk and am currently in the programming class.",
+    "vasili_fact":"When I was 2 I could name most brands of cars by logo."
+
+
 
 } 
