Fix JSON formatting for sofiamazareanu_fact

--- a/lang/en.json
+++ b/lang/en.json
@@ -211,7 +211,7 @@
     "alanamangione_fact": "I don't know anything about coding. This is awkward.",
 
     "sofiamazareanu_desc": "I directed the video and wrote the script for it.",
-    "sofiamazareanu_fact": "I like the colour blue."
+    "sofiamazareanu_fact": "I like the colour blue.",
 
     
     "mentordesc":"Mentor & Science Teacher",
