Update translation for 'entire' key

--- a/lang/en.json
+++ b/lang/en.json
@@ -16,7 +16,7 @@
     "coding":"Coding",
     "website":"Website",
     "mentors":"Mentors",
-    "entire":"The Entire Team",
+    "entire":"Entire Team",
 
 
     "back_button": "Back",
