--- a/lang/en.json
+++ b/lang/en.json
@@ -220,7 +220,10 @@
     "gill_desc":"I am a mentor of the robotics club at West Isand College.",
     "gill_fact":"I hate everybody equally.",
     "vasili_desc":"Worked on kiosk and am currently in the programming class.",
-    "vasili_fact":"When I was 2 I could name most brands of cars by logo."
+    "vasili_fact":"When I was 2 I could name most brands of cars by logo.",
+
+    "welcome":"Welcome Bruce Wayne",
+    "welcome2":"----Authorized Operator: CRC Robotics Team----"
 
 
 
