Add welcome messages in French localization

--- a/lang/fr.json
+++ b/lang/fr.json
@@ -215,7 +215,10 @@
     "gill_desc":"Je suis mentor du club de robotique au West Isand College.",
     "gill_fact":"Je déteste tout le monde également.",
     "vasili_desc":"J'ai travaillé sur le kiosque et je suis maintenant dans ler cours de programmation.",
-    "vasili_fact":"À l'âge de 2 ans, je pouvais reconnaître la plupart des marques de voitures grâce à leur logo."
+    "vasili_fact":"À l'âge de 2 ans, je pouvais reconnaître la plupart des marques de voitures grâce à leur logo.",
+
+    "welcome":"Bienvenu Bruce Wayne",
+    "welcome2":"----Opérateur autorisé : Équipe de robotique CRC----"
 
 
     
