Add welcome3 message to en.json

--- a/lang/en.json
+++ b/lang/en.json
@@ -223,7 +223,8 @@
     "vasili_fact":"When I was 2 I could name most brands of cars by logo.",
 
     "welcome":"Welcome Bruce Wayne",
-    "welcome2":"----Authorized Operator: CRC Robotics Team----"
+    "welcome2":"----Authorized Operator: CRC Robotics Team----",
+    "welcome3":"Access systems via the sidebar to the left of the screen"
 
 
 
