Add welcome3 message to French localization

--- a/lang/fr.json
+++ b/lang/fr.json
@@ -218,7 +218,8 @@
     "vasili_fact":"À l'âge de 2 ans, je pouvais reconnaître la plupart des marques de voitures grâce à leur logo.",
 
     "welcome":"Bienvenu Bruce Wayne",
-    "welcome2":"----Opérateur autorisé : Équipe de robotique CRC----"
+    "welcome2":"----Opérateur autorisé : Équipe de robotique CRC----",
+    "welcome3":"Accédez aux systèmes via la barre latérale située à gauche de l’écran"
 
 
     
