--- a/lang/en.json
+++ b/lang/en.json
@@ -20,6 +20,8 @@
 
 
     "back_button": "Back",
+    "back1":"Comic",
+    "back2":"Back to Our Team Page",
     
     "task":"What Did I do? :",
     "fun_fact":"Fun Fact :",
