--- a/lang/fr.json
+++ b/lang/fr.json
@@ -19,6 +19,9 @@
     "entire":"L'équipe entière",
 
     "back_button": "Retour",
+    "back1":"Bande dessinée",
+    "back2":"Retour à la page de notre équipe",
+    
 
     "task":"Quelle est ma contribution? :",
     "fun_fact":"Fait intéressant :",
