--- a/lang/en.json
+++ b/lang/en.json
@@ -21,7 +21,7 @@
 
     "back_button": "Back",
     "back1":"Comic",
-    "back2":"Back to Our Team Page",
+    "back2":"Team Page",
     
     "task":"What Did I do? :",
     "fun_fact":"Fun Fact :",
