--- a/lang/fr.json
+++ b/lang/fr.json
@@ -19,8 +19,8 @@
     "entire":"L'équipe entière",
 
     "back_button": "Retour",
-    "back1":"Bande dessinée",
-    "back2":"Retour à la page de notre équipe",
+    "back1":"BD",
+    "back2":"Page Équipe",
     
 
     "task":"Quelle est ma contribution? :",
